[tool.poetry]
name = "restud-report"
version = "0.1.0"
description = ""
authors = ["Miklos Koren <miklos.koren@gmail.com>"]
readme = "README.md"
packages = [{include = "restud_report"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.13.0"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
